app/static/css/styles.css
:root {
    --primary-color: #1F2937;
    --secondary-color: #78350F;
    --background-color: #94A3B7;
}

/* Visualizers */

.point-wrapper {
  position: absolute;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.point {
  position: absolute;
  width: 15px;
  height: 15px;
  background-color: var(--secondary-color);
  border-radius: 50%;
  box-shadow: 0px 0px 0px 25px rgba(120, 53, 15, 0.2);
  transform: translate(-50%, -50%);
}

.point-label {
  position: absolute;
  left: 14px;
  top: 50%;
  transform: translateY(-50%);
  background: rgba(31,41,55,0.9);
  color: #fff;
  font-size: 18px;
  font-weight: 500;
  padding: 2px 6px;
  border-radius: 4px;
  white-space: nowrap;
  pointer-events: none;
}

#amplitude-max-slider {
    writing-mode: vertical-lr;
    direction: rtl;
    vertical-align: middle;
}

#doppler-max-slider {
    writing-mode: vertical-lr;
    direction: rtl;
    vertical-align: middle;
}

input[type="range"].vertical {
  -webkit-appearance: slider-vertical;
}

#visualizer-title {
  background-color: var(--primary-color);
  color: #FFFFFF;
  padding: 6px 10px;
  border-radius: 6px 6px 0 0;
  font-weight: 500;
  font-size: 16px;
  pointer-events: none;
}

#heatmap-y-axis-label {
  display: flex;
  justify-content: center;
  writing-mode: vertical-rl;
  transform: rotate(180deg);
  font-size: 18px;
  font-weight: 500;
  pointer-events: none;
}

#heatmap-x-axis-label {
  display: block;
  width: 100%;
  height: 0;
  text-align: center;
  font-size: 17px;
  transform: translateY(-2.25rem);
  font-weight: 500;
  pointer-events: none;
}

/* Status Bar */

/* Per-wave colors for Wi‑Fi icon */
#ap-status #wave-1 { stroke: #38cd3b; }
#ap-status #wave-2 { stroke: #38cd3b; }
#ap-status #wave-3 { stroke: #38cd3b; }
#ap-status #ap-dot { fill:   #38cd3b; }

#status-bar-wrapper {
  position: relative;
  display: inline-flex;
  flex-direction: column;
  align-items: center;
}

#status-bar-tooltip {
  position: absolute;
  top: 140%;
  left: 50%;
  transform: translate(-50%, 4px);
  background: var(--primary-color);
  color: #fff;
  font-size: 14px;
  font-weight: 500;
  padding-block: 4px;
  padding-inline: 6px;
  border-radius: 6px;
  white-space: nowrap;
  transition: opacity .3s ease;
  pointer-events: none;
  z-index: 999;
}

#status-bar-wrapper:hover #status-bar-tooltip {
  transition-delay: 1s;
  opacity: 1;
}

#status-bar-wrapper:not(:hover) #status-bar-tooltip {
  transition-delay: 0s;
  opacity: 0;
}

/* Floating Button Tooltip */

.button-wrapper {
  position: relative;
  background-color: (var(--secondary-color));
  padding: 0.5rem;
  border-radius: 1rem;
}

#monitor-mode-btn {
  position: relative;
  background-color: (var(--secondary-color));
  padding: 0.5rem;
  border-radius: 1rem;
}

#button-tooltip {
  position: absolute;
  bottom: 110%;
  left: 50%;
  transform: translateX(-50%);
  background: var(--primary-color);
  color: #fff;
  font-size: 14px;
  font-weight: 500;
  padding-block: 6px;
  padding-inline: 8px;
  border-radius: 6px;
  white-space: nowrap;
  transition: opacity .3s ease;
  pointer-events: none;
}

.button-wrapper:hover {
  transform: scale(1.1);
  transition: transform .18s ease;
}

.button-wrapper:hover #button-tooltip {
  transition-delay: 1s;
  opacity: 1;
}

.button-wrapper:not(:hover) #button-tooltip {
  transition-delay: 0s;
  opacity: 0;
}

#svg-button-icon {
  width: 32px;
  height: 32px;
  fill: #ffffff;
}

/* Asides */

input[type="range"]::-webkit-slider-thumb {
    appearance: none;
    width: 15px;
    height: 15px;
    background: var(--primary-color);
    border-radius: 8px;
    cursor: pointer;
}

/* Scroll Bar */

.scroll-container {
  scrollbar-width: thin;       /* Firefox */
  scrollbar-color: #94A3B7 transparent;
}

/* Chrome/Edge/Safari */
.scroll-container::-webkit-scrollbar {
  width: 10px;
}

/* Hide Non-User Elements */

#lower-sidebar {
  visibility: hidden;
}

#aside-container {
  width: 0;
  visibility: hidden;
}

#record-mode-btn {
  visibility: hidden;
}

#history-tab-btn {
  visibility: hidden;
}

#dataset-tab-btn {
  visibility: hidden;
}

